# wbar

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml
examples/: config.toml
scripts/: check-clean-tree.sh  deploy.sh
src/: appbar.rs  config.rs  default_config.toml  fonts.rs  glazewm.rs  hotreload.rs  ipc.rs  main.rs  theme.rs  tray.rs  wake.rs
src/widgets/: clock.rs  command.rs  mod.rs  spacer.rs  sysinfo.rs  tiling_direction.rs  workspaces.rs
