[package]
name = "wbar"
version = "1.2.1"
edition = "2024"
rust-version = "1.85"
description = "Minimalist status bar for Windows + GlazeWM"
license = "MIT"
repository = "https://github.com/yannickherrero/wbar"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
dirs = "6.0.0"
eframe = "0.32.3"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strfmt = "0.2.5"
sysinfo = { version = "0.36.1", default-features = false, features = ["system", "network"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
tray-icon = { version = "0.24.0", default-features = false }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
