[package]
name = "wbar"
version = "1.2.5"
edition = "2024"
rust-version = "1.85"
description = "Minimalist status bar for Windows + GlazeWM"
license = "MIT"
repository = "https://github.com/yannickherrero/wbar"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
dirs = "6.0.0"
eframe = "0.32.3"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
starship-battery = "0.10"
strfmt = "0.2.5"
sysinfo = { version = "0.36.1", default-features = false, features = ["system", "network"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
# tray-icon routes to NSStatusBar on macOS and Shell_NotifyIcon on Windows.
# Linux backend would drag in GTK so we don't list it for other targets.
tray-icon = { version = "0.24.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# Needed for: (1) setting NSApplication activation policy to "accessory"
# so wbar doesn't show a Dock tile or a "wbar" main menu entry, and
# (2) reading NSScreen.frame / .visibleFrame to offset the bar below
# the system menu bar.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder", "NSRunningApplication", "NSScreen"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSArray", "NSEnumerator"] }

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
